Refactor ZOOM -> ZOOM2

--- a/templates/breakoutrooms_room_datatoclone.mustache
+++ b/templates/breakoutrooms_room_datatoclone.mustache
@@ -15,7 +15,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template mod_zoom/breakoutrooms_room_datatoclone
+    @template mod_zoom2/breakoutrooms_room_datatoclone
 
     Context variables required for this template:
     * roomid Room ID.
@@ -49,14 +49,14 @@
             <a class="nav-link" href="" data-toggle="tab" role="tab">
                 <span class="tab-name"></span>
             </a>
-            <button type="button" class="pull-right delete-room" title="{{#str}} deleteroom, zoom {{/str}}">
+            <button type="button" class="pull-right delete-room" title="{{#str}} deleteroom, zoom2 {{/str}}">
               <span class="fa fa-trash-o fa-lg" aria-hidden="true"></span>
             </button>
         </li>
     </ul>
     <div id="rooms-list-item-data">
         <div class="tab-pane" role="tabpanel">
-            {{> zoom/breakoutrooms_room_data }}
+            {{> zoom2/breakoutrooms_room_data }}
         </div>
     </div>
 </div>
