--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
-.zoom-info {
+.zoom2-info {
     padding: 0.2em 0.6em 0.3em;
     color: #fff;
     border-radius: 0.25em;
 }
 
-#page-mod-zoom-view a .btn-primary .icon {
+#page-mod-zoom2-view a .btn-primary .icon {
     color: white;
 }
 
-#mod-zoom-old-meetings-header {
+#mod-zoom2-old-meetings-header {
     float: left;
 }
 
