--- a/templates/breakoutrooms_room_data.mustache
+++ b/templates/breakoutrooms_room_data.mustache
@@ -15,7 +15,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template mod_zoom/breakoutrooms_room_data
+    @template mod_zoom2/breakoutrooms_room_data
 
     Context variables required for this template:
     * roomid Room ID.
@@ -43,12 +43,12 @@
         ]
     }
 }}
-<label for="room-name-{{roomid}}">{{#str}} roomname, zoom {{/str}}</label>
+<label for="room-name-{{roomid}}">{{#str}} roomname, zoom2 {{/str}}</label>
 <input type="text" class="form-control col-sm-6 room-name" id="room-name-{{roomid}}" name="room-name-{{roomid}}" value="{{roomname}}">
 <input type="hidden" name="{{toclone}}rooms[{{roomid}}]" value="{{roomname}}">
 <hr>
-<span>{{#str}} participants, zoom {{/str}}</span>
-{{> zoom/breakoutrooms_room_participants }}
+<span>{{#str}} participants, zoom2 {{/str}}</span>
+{{> zoom2/breakoutrooms_room_participants }}
 <hr>
-<span>{{#str}} participantgroups, zoom {{/str}}</span>
-{{> zoom/breakoutrooms_room_groups }}
+<span>{{#str}} participantgroups, zoom2 {{/str}}</span>
+{{> zoom2/breakoutrooms_room_groups }}
